cscsite/assets/css/style.css
/* Bootstrap overrides. */

.btn-primary {
  background-color: #678D9E;
  border-color: #437185;
}

.btn-primary:hover {
  background-color: #437185;
}


/* Local styles. */

h1.bigger-margin {
  margin-top: 40px !important;
  margin-bottom: 20px !important;
}

h4.bigger-margin {
  margin-top: 20px !important;
  margin-bottom: 20px !important;
}

h4.no-top-margin {
  margin-top: 0px !important;
}

.container {
  width: 960px !important;
}

.container.inner {
  padding-left: 0px;
  padding-right: 0px;
  width: 940px !important;
}

.logo-cell {
  position: relative;
  margin-left: 15px;
  margin-right: 10px;
  width: 80px;
  float: left;
  height: 40px;
}

.logo-container {
  position: absolute;
  z-index: 1000;
}

.header.lvl1 {
  height: 40px;
  background-color: #678D9E;
  color: white;
}

.header.lvl1 .row {
  background-color: #678D9E;
}

.header-lvl2-container {
  position: relative;
  height: 40px;
  margin-bottom: 20px;
}

.header.lvl2 {
  width: 100%;
  /* width: 960px; */
  height: 40px;
  color: white;
  display: none;
  position: absolute;
  z-index: -1;
}

.header.lvl2.current {
  display: block;
  z-index: 100;
}

.header ul {
  padding-left: 0px;
}

.header a {
  color: white;
}

.header a:hover {
  text-decoration: none;
}

.header li {
  list-style: none;
  float: left;
  line-height: 40px;
  padding: 0px 12px;
  font-family: sans-serif;
  font-weight: bolder;
  cursor: pointer;
}

.header.lvl2,
.header.lvl2 .row {
  background-color: #99B6C3;
}

.header li:hover {
  background-color: #437185;
}
.header li.current {
  background-color: #24556A !important;
}

.header.lvl2.for-students {
  background-color: #FBAA9F;
}
.header.lvl2.for-students .row {
  background-color: #FBAA9F;
}
li.for-students.current {
  background-color: #A84234 !important;
}
.header.for-students li:hover {
  background-color: #D37265;
}
.header.for-students li.current {
  background-color: #A84234 !important;
}

.header.lvl2.for-teachers {
  background-color: #A6A8CD;
}
.header.lvl2.for-teachers .row {
  background-color: #A6A8CD;
}
li.for-teachers.current {
  background-color: #515492 !important;
}
.header.for-teachers li:hover {
  background-color: #787AAE;
}
.header.for-teachers li.current {
  background-color: #515492 !important;
}

.header.lvl2.for-staff {
  background-color: #D3B665;
}
.header.lvl2.for-staff .row {
  background-color: #D3B665;
}
li.for-staff.current {
  background-color: #D3B665 !important;
}
.header.for-staff li:hover {
  background-color: #D3B665
}
.header.for-staff li.current {
  background-color: #D3B665 !important;
}

.header li i {
  font-weight: normal;
}

.header .badge {
  background-color: transparent;
  border: 1px solid white;
}

.header .login {
  line-height: 40px;
  font-family: sans-serif;
  font-weight: bolder;
  text-align: right;
}

.header .login .logout-url {
  font-weight: normal;
}

body {
  margin-bottom: 90px;
  /* min-height: 100%; */
}

html {
  position: relative;
  min-height: 100%;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  margin-bottom: 0;
  background-color: #E6E6E6;
  border-top: 2px solid #9B9B9B;
  line-height: 55px;
  color: #9B9B9B;
  margin-top: 75px;
}

.footer .social {
  background-color: #EDEDED;
  text-align: justify;
}

.footer .social a {
  text-align: center;
  color: #9B9B9B;
}

.footer .social a:hover {
  color: #777;
}

.footer .social i {
  vertical-align: middle;
}

.news-metainfo {
  color: #AAA;
  text-align: right;
}

.index-image-container {
  margin-top: -40px;
  background: url("") repeat-x;
}

.callout h1 {
  margin-top: 50px;
  background-color: rgba(255, 255, 255, 0.5);
  padding: 5px;
  text-align: justify;
}

.callout p {
  background-color: rgba(255, 255, 255, 0.5);
  padding: 5px;
  font-weight: 200;
  font-size: 23px;
}

.callout-buttons {
  text-align: right;
}

.callout-buttons a {
  margin: 30px 15px;
}

.index-news {
  padding-left: 0px;
}

.index-news li {
  position: relative;
  list-style: none;
}

.index-news span.date {
  position: absolute;
  margin-left: -160px;
  padding-right: 10px;
  width: 160px;
  text-align: right;
  font-size: 18px;
  color: #B5B5B5;
}

.supported-by {
    line-height: 50px;
    padding-left: 0;
    overflow: hidden;
}

.supported-by li {
  list-style: none;
  display: block;
  float: left;
  width: 150px;
  margin: 10px;
  color: black;
}

.supported-by img {
  clear: both;
}

.col-container {
  width: 940px;
}

.columns {
  -webkit-column-count: 2;
  -webkit-column-gap: 10px;
  -webkit-column-fill: auto;
  -moz-column-count: 2;
  -moz-column-gap: 10px;
  -moz-column-fill: auto;
  column-count: 2;
  column-gap: 10px;
  column-fill: auto;
}

.user-tile {
  -webkit-column-break-inside: avoid;
  -moz-column-break-inside: avoid;
  column-break-inside: avoid;
  margin-bottom: 10px;
}

.user-tile .user-info h4 {
  margin-top: 0px;
}

.timetable .badge {
  color: black;
  border: 1px solid #D3D3D3;
  font-weight: normal;
  border-radius: 5px;
}

.timetable .badge.lecture {
  background-color: #F9F9F9;
}

.timetable .badge.seminar {
  background-color: #E9E9E9;
}

.timetable-header-row .center {
  text-align: center;
}

.timetable-header-row .center h2 {
  margin: 0px;
}

.timetable-main-row h4 {
  margin-top: 40px;
}

.center-aligned {
  text-align: center;
}

h2 small a {
  color: #999;
}

.h2-and-buttons h2 {
  float: left;
}

.h2-and-buttons .btn-toolbar {
  float: right;
  margin-top: 20px;
  margin-bottom: 10px;
}

.h2-and-buttons hr {
  clear: both;
}

.h2-and-buttons small {
  white-space: nowrap;
}

.btn {
  border-radius: 0px !important;
}

.badge {
  border-radius: 0px !important;
}

.badge.lecture, .badge.seminar { width: 6em; }

.csc-well {
  background-color: #F1F1F1;
  min-height: 20px;
  padding: 19px;
  margin-bottom: 20px;
}

h5.assignment {
  font-weight: bold;
}

.assignment-attachment {
  color: #999;
}

.assignment-comment .metainfo {
  color: #999;
}

.assignment-comment .metainfo-holder {
  min-height: 20px;
}

.comment-list {
  list-style: none;
  padding: 0px;
}

.comment-list li.student {
  margin-right: 80px;
  margin-left: 0px;
}

.comment-list li.teacher {
  margin-right: 0px;
  margin-left: 80px;
}

#div_id_deadline_at {
  width: 400px;
}

#div_id_deadline_at input#id_deadline_at_0 {
  width: 49%;
  float: left;
  margin-right: 1%;
}

#div_id_deadline_at input#id_deadline_at_1 {
  width: 49%;
  float: left;
  margin-right: 1%;
}

.marks-table-container {
  width: 100%;
  margin-bottom: 15px;
  padding-bottom: 15px;
  overflow-x: scroll;
  overflow-y: hidden;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  -webkit-overflow-scrolling: touch;
}

.marks-table .marks-header-vert {
  vertical-align: top;
  height: 15em;
  max-width: 1.7em;
  /* overflow: hidden; */
}

.marks-table .marks-header-vert .inner {
  line-height: 1.5em;
  width: 20em;
  text-overflow: ellipsis;
  text-align: left;
  overflow: hidden;
  /* setting background may yield better results in IE text clear type rendering */
  background: #fff;
  display: block;
  white-space: nowrap;
  padding-left: 3px;
  /* IE specific rotation code */
  writing-mode: tb-rl;
  filter: flipv fliph;
  /* CSS3 specific totation code */
  /* translate should have the same negative dimension as head height */
  transform: rotate(315deg) translate(-9em,10em);
  transform-origin: 0 0;
  -moz-transform: rotate(315deg) translate(-9em,10em);
  -moz-transform-origin: 0 0;
  -webkit-transform: rotate(315deg) translate(-9em,10em);
  -webkit-transform-origin: 0 0;
}

.marks-table td {
  vertical-align: middle;
  text-align: center;
  margin: 10px;
}

.marks-table td.marks-header {
  font-weight: bold;
}

.marks-table td.marks-header-horiz {
  text-align: right;
  white-space: nowrap;
}

.marks-table td.content {
  padding: 0px 10px;
  width: 40px;
}

.calendar th {
  width: 134px;
}

.calendar td {
  padding: 4px !important;
  width: 134px;
}

.calendar div.week-num-container {
  position: relative;
}

.calendar div.week-num {
  margin-left: -25px;
  position: absolute;
  font-weight: bold;
  color: #666;
}

.calendar td .cell {
  min-height: 100px;
  width: 126px;
}

.calendar .day {
  font-weight: bold;
  color: #BBB;
  text-align: right;
}

.calendar .class {
  margin-bottom: 3px;
  border: 1px solid #D3D3D3;
  overflow: hidden;
  text-overflow: ellipsis;
}

.calendar .class.lecture {
  background-color: #F9F9F9;
}

.calendar .class.seminar {
  background-color: #E9E9E9;
}

.calendar .class .times {
  white-space: nowrap;
}

.calendar .not-in-semester {
  background-color: #EEE;
}

.calendar .not-in-semester .day {
  color: #CCC;
}

.assignment-status {
  color: black;
  border: 1px solid #D3D3D3;
  font-weight: normal;
  border-radius: 5px;
}
.assignment-status.not-checked {
  background-color: #F9F9F9;
}
.assignment-status.being-checked {
  background-color: #E9E9E9;
}
.assignment-status.unsatisfactory {
  background-color: #FF6B78;
}
.assignment-status.pass {
  background-color: #F39700;
}
.assignment-status.good {
  background-color: #FAEB7D;
}
.assignment-status.excellent {
  background-color: #8CE087;
}

.assignment-date.tomorrow {
  color: #FF6B78;
}
.assignment-date.today {
  color: #FF6B78;
}
.assignment-date.day-after-tomorrow {
  color: #F39700;
}

tr.unread {
  background-color: #E2F9FF;
}

.marks-table .enrolled {
  background-color: #E2F9FF;
}

.list-unstyled.no-margin {
  margin-bottom: 0px !important;
}

.marks-sheet-unsaved-cell {
  border-left: 2px solid #428bca;
  padding-left: 3px;
  margin-left: -3px;
}

#course-list > li:first-child { padding-left: 5px !important; }

.semester-course-list ul { padding-left: 15px; }

.course-offering-profs ul > li { padding-bottom: 10px; }

.input-grade {
  width: 100px !important;
}

.form-group div.controls {
  margin-right: 1%;
}

